--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -4,16 +4,16 @@
       <mat-label>Schema</mat-label>
       <mat-select formControlName="schema" required>
         <mat-option *ngFor="let schema of schemas" [value]="schema.name">{{schema.name}}</mat-option>
-        <!-- <mat-option value="Test2">Test2</mat-option> -->
-        <!-- <mat-option value="B">B</mat-option> -->
       </mat-select>
     </mat-form-field>
-
+  </div>
+  <div>
     <mat-form-field class="code topic">
       <mat-label>Topic</mat-label>
       <input matInput placeholder="topic" formControlName="topic" required>
     </mat-form-field>
-
+  </div>
+  <div>
     <mat-form-field class="code key">
       <mat-label>Key</mat-label>
       <input matInput formControlName="key" required>
@@ -22,9 +22,9 @@
   <div>
     <mat-form-field class="code payload" appearance="fill">
       <mat-label>Payload</mat-label>
-      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="6" cdkAutosizeMaxRows="10"
-        formControlName="payload" required></textarea>
+      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18" formControlName="payload"
+        required></textarea>
     </mat-form-field>
+    <button mat-raised-button color="primary" (click)="produce()" [disabled]="!messageForm.valid">Produce</button>
   </div>
 </form>
-<button mat-raised-button color="primary" (click)="produce()" [disabled]="!messageForm.valid">Produce</button>
