--- a/src/app/schema-dialog/schema-dialog.component.scss
+++ b/src/app/schema-dialog/schema-dialog.component.scss
@@ -9,11 +9,11 @@
   width: 500px;
 }
 
-.name-input {
+.subject-input {
   width: 420px;
 }
 
-.content-input {
+.schema-input {
   width: 100%;
 }
 
