--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -2,8 +2,8 @@
   <div>
     <mat-form-field class="code schema">
       <mat-label>Schema</mat-label>
-      <mat-select formControlName="schema" required>
-        <mat-option *ngFor="let schema of schemas" [value]="schema.name">{{schema.name}}</mat-option>
+      <mat-select formControlName="schemaId" required>
+        <mat-option *ngFor="let schema of schemas" [value]="schema.id">{{schema.subject}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -20,9 +20,9 @@
     </mat-form-field>
   </div>
   <div>
-    <mat-form-field class="code payload" appearance="fill">
-      <mat-label>Payload</mat-label>
-      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18" formControlName="payload"
+    <mat-form-field class="code value" appearance="fill">
+      <mat-label>Value</mat-label>
+      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18" formControlName="value"
         required></textarea>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="produce()" [disabled]="!messageForm.valid">Produce</button>
