some more design (WIP, need to fix heights\flex)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <div class="notifications item">
     <app-notifications></app-notifications>
   </div>
-  <div class="code">
+  <div class="item footer code">
     <span class="app-name">kaffi 👏</span><span class="separator">__</span>eliavlavi<span class="separator">_</span>2020
   </div>
 </div>
