--- a/src/app/notifications/notifications.component.scss
+++ b/src/app/notifications/notifications.component.scss
@@ -1,10 +1,14 @@
 .notifications {
-  height: 100%;
+  height: 80%;
   padding: 10px 15px;
-  color: white;
-  background:black;
+  background: #f2f2f2bf;
+  border-style: solid;
+  border-width: 4px;
+  border-color: black;
+  border-radius: 10px;
+  overflow-y: scroll;
 }
 
 .time {
-  color: pink;
+  color: rgb(255, 94, 121);
 }
