--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,8 @@
   </div>
   <div class="notifications item">
     <app-notifications></app-notifications>
-  </div>  
+  </div>
+  <div class="item footer code">
+    <span class="app-name">kaffi 👏</span><span class="separator">__</span>eliavlavi<span class="separator">_</span>2020
+  </div>
 </div>
