--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,30 +1,77 @@
 <form class="message-form" [formGroup]="messageForm">
   <div>
-    <mat-form-field class="code schema">
-      <mat-label>Schema</mat-label>
-      <mat-select formControlName="schemaId" required>
-        <mat-option *ngFor="let schema of schemas" [value]="schema.id">{{schema.subject}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div>
     <mat-form-field class="code topic">
       <mat-label>Topic</mat-label>
       <input matInput placeholder="topic" formControlName="topic" required>
     </mat-form-field>
   </div>
+
   <div>
-    <mat-form-field class="code key">
-      <mat-label>Key</mat-label>
-      <input matInput formControlName="key" required>
-    </mat-form-field>
+    <label>Key Serializer</label>
+    <mat-radio-group class="radio-group" formControlName="keySerializer">
+      <mat-radio-button class="radio-button" value="string">String</mat-radio-button>
+      <mat-radio-button class="radio-button" value="avro">AVRO</mat-radio-button>
+    </mat-radio-group>
   </div>
+
+  <div *ngIf="messageForm.value.keySerializer=='avro'">
+    <mat-form-field class="code schema">
+      <mat-label>Schema</mat-label>
+      <mat-select formControlName="keySchemaId" required>
+        <mat-option *ngFor="let schema of schemas" [value]="schema.id">{{schema.subject}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <div>
+      <mat-form-field class="code payload">
+        <mat-label>Key</mat-label>
+        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="5" cdkAutosizeMaxRows="8"
+          formControlName="keyPayload" required></textarea>
+      </mat-form-field>
+    </div>
+  </div>
+  
+  <div *ngIf="messageForm.value.keySerializer=='string'">
+    <div>
+      <mat-form-field class="code payload">
+        <mat-label>Key</mat-label>
+        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18"
+          formControlName="keyPayload" required></textarea>
+      </mat-form-field>
+    </div>
+  </div>
+
   <div>
-    <mat-form-field class="code value" appearance="fill">
+    <label>Value Serializer</label>
+    <mat-radio-group class="radio-group" formControlName="valueSerializer">
+      <mat-radio-button class="radio-button" value="string">String</mat-radio-button>
+      <mat-radio-button class="radio-button" value="avro">AVRO</mat-radio-button>
+    </mat-radio-group>
+  </div>
+
+  <div *ngIf="messageForm.value.valueSerializer=='avro'">
+    <mat-form-field class="code schema">
+      <mat-label>Schema</mat-label>
+      <mat-select formControlName="valueSchemaId" required>
+        <mat-option *ngFor="let schema of schemas" [value]="schema.id">{{schema.subject}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <div>
+      <mat-form-field class="code payload">
+        <mat-label>Value</mat-label>
+        <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18"
+          formControlName="valuePayload" required></textarea>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div *ngIf="messageForm.value.valueSerializer=='string'">
+    <mat-form-field class="code payload">
       <mat-label>Value</mat-label>
-      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18" formControlName="value"
-        required></textarea>
+      <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="10" cdkAutosizeMaxRows="18"
+        formControlName="valuePayload" required></textarea>
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="produce()" [disabled]="!messageForm.valid">Produce</button>
   </div>
+  <button mat-raised-button color="primary" (click)="produce()" [disabled]="!messageForm.valid">Produce</button>
 </form>
